[gd_scene load_steps=3 format=3 uid="uid://dpgwy82yhmsgj"]

[ext_resource type="Script" path="res://game/camera/observing_camera.gd" id="1_dxlbd"]

[sub_resource type="SphereShape3D" id="SphereShape3D_yp5mf"]
radius = 0.1

[node name="ObservableCamera" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, 0)
script = ExtResource("1_dxlbd")

[node name="CameraPivotY" type="Node3D" parent="."]

[node name="CameraPivotX" type="Node3D" parent="CameraPivotY"]
transform = Transform3D(1, 0, 0, 0, 0.819152, 0.573576, 0, -0.573576, 0.819152, 0, 0, 0)

[node name="SpringArm" type="SpringArm3D" parent="CameraPivotY/CameraPivotX"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.368619, 0.258109)
shape = SubResource("SphereShape3D_yp5mf")
spring_length = 6.0

[node name="Camera" type="Camera3D" parent="CameraPivotY/CameraPivotX/SpringArm"]
current = true
fov = 80.0

[node name="RayCast3D" type="RayCast3D" parent="CameraPivotY/CameraPivotX/SpringArm/Camera"]
target_position = Vector3(0, 0, 0)
collision_mask = 3
